--- a/styles.css
+++ b/styles.css
@@ -3,33 +3,33 @@
   padding: 0;
 }
 body {
-  padding: 10px;
+  padding: 2px;
 }
 
 .grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-
-grid-template-rows: auto auto auto auto auto auto auto;
+  grid-template-rows: auto auto auto auto auto;
+  color: black;
   //grid-auto-rows: auto;
-  //grid-gap: 10px;
+
   grid-template-areas:
   " one two two two two "
   " three five five five five "
-  " four six seven eight eight"
-  " four six seven nine nine"
-  " four ten ten ten ten "
-  " eleven thirteen thirteen thirteen thirteen "
-   " twelve thirteen thirteen thirteen thirteen";
+  " four six seven eight nine "
+  " four six seven ten ten "
+  " four eleven eleven eleven eleven "
+  " twelve fourteen fourteen fourteen fourteen "
+  " thirteen fourteen fourteen fourteen fourteen ";
 
 }
 
 .grid div:nth-child(odd) {
-//background-color: black;
+
 }
 
 .grid div:nth-child(even) {
-  //background-color: black;
+
 }
 
  .one {
@@ -43,9 +43,7 @@ grid-template-rows: auto auto auto auto auto auto auto;
 font-size: 150%;
 //justify-self: center ;
 font-family: Comic Sans MS;
-
-}
-
+ }
 
  .two {
   grid-area: two;
@@ -87,7 +85,6 @@ background-color: #878332;
 
   margin: 20px;
 }
-
 .four {
   grid-area: four;
  background-color: black;
@@ -95,7 +92,7 @@ background-color: #878332;
 }
 .four > p{
   margin: auto;
-    width: 85%;
+    width: 80%;
   color: white;
   padding: 4px;
   border: 10px
@@ -117,7 +114,6 @@ font-family:Verdana ;
   padding: 12px;
   margin: 2px;
 }
-
 .five {
   grid-area: five;
   //justify-self: center ;
@@ -131,7 +127,7 @@ font-family:Verdana ;
 }
 .six > img{
   padding: 20px;
-  border: 10px
+  border: 2px
 }
 .seven {
   grid-area: seven;
@@ -142,7 +138,9 @@ font-family:Verdana ;
   grid-area: eight;
   //justify-self: center ;
     background-color: #2f2f2f;
-    border: 5px solid white;
+    border: 5px solid white ;
+    width: 450px;
+    padding: 1px;
 
 }
 .eight > p4{
@@ -150,61 +148,128 @@ font-family:Verdana ;
  padding: 10px;
     width: 320px;
  margin: 0;
-  margin: auto;
-    width: 85%;
+    width: 100%;
   color: white;
-  padding: 24px;
+  padding: 25px;
   border: 10px
 font-size: 100%;
 //justify-self: center ;
 font-family:Verdana ;
+
 }
 .nine {
   grid-area: nine;
   background-color: #2f2f2f;
   //justify-self: center ;
-   padding: 20px;
-}
-.nine > center > p7{
-  color: yellow;
-font-size: 100%;
-//justify-self: center ;
-font-family: Verdana;
-}
-.nine > center > p8{
-  color: yellow;
-font-size: 100%;
-//justify-self: center ;
-font-family: Verdana;
-.ten {
-  grid-area: ten;
-  //justify-self: center ;
-
-}
-.nine > p9{
-  color: yellow;
-font-size: 100%;
-//justify-self: center ;
-font-family: Verdana;
 }
 .ten {
   grid-area: ten;
   background-color: #2f2f2f;
-  //justify-self: center ;
+}
+.ten > center > p7{
+  color: yellow;
+font-size: 130%;
+padding: 0.5px;
 
-   font-family: Verdana;
- }
+font-family: Verdana;
+  text-align: left;
+}
+.ten > center > p8{
+  color: yellow;
+font-size: 100%;
+//justify-self: center ;
+font-family: Verdana;
+}
+.ten > p9{
+  color: yellow;
+font-size: 100%;
+//justify-self: center ;
+font-family: Verdana;
+}
 .eleven {
   grid-area: eleven;
-    padding: 20px;
-  }
+  //justify-self: center ;
+    background-color: #2f2f2f;
+}
+.eleven >p9{
+    padding: 30px;
+    margin: 20px;
+}
+.eleven > p9{
+  color: white;
+font-size: 200%;
+padding: 0.5px;
 
-
+font-family: Helvetica;
+font-weight: bold;
+  text-align: left;
+}
 .twelve {
   grid-area: twelve;
   //justify-self: center ;
+  background-color: black;
+}
+.twelve > a{
+  padding: 2px;
+margin: 10px;
 }
 .thirteen {
   grid-area: thirteen;
   //justify-self: center ;
+    background-color: black;
+}
+
+.thirteen > img{
+  padding: 5px;
+  border: 2px;
+}
+.fourteen {
+  grid-area: fourteen;
+  //justify-self: center ;
+    background-color: #2f2f2f;
+    padding: 18px;
+
+}
+.fourteen > div{
+  background-color: #878332;
+  width: 900px;
+  border: 5px solid black ;
+  padding: 10px;
+  margin: 2px;
+  font-family: Verdana;
+ color: black;
+ font-weight: bold;
+}
+.fourteen > h1{
+  background-color: #878332;
+  width: 700px;
+  border: 5px solid black ;
+  padding: 10px;
+  margin: 2px;
+  font-family: Verdana;
+ color: black;
+ font-weight: bold;
+ font-size: 100%;
+}
+.fourteen > h2{
+  background-color: #878332;
+  width: 800px;
+  border: 5px solid black ;
+  padding: 10px;
+  margin: 2px;
+  font-family: Verdana;
+ color: black;
+ font-weight: bold;
+ font-size: 100%;
+}
+.fourteen > h3{
+  background-color: #878332;
+  width: 400px;
+  border: 5px solid black ;
+  padding: 10px;
+  margin: 2px;
+  font-family: Verdana;
+ color: black;
+ font-weight: bold;
+ font-size: 100%;
 }
