--- a/styles.css
+++ b/styles.css
@@ -89,14 +89,13 @@ background-color: #878332;
   grid-area: four;
  background-color: black;
   //justify-self: center ;
-  text-decoration: none;
 }
 .four > p{
   margin: auto;
     width: 90%;
   color: white;
   padding: 4px;
-  border: 10px
+  border: 10px;
 font-size: 100%;
 //justify-self: center ;
 font-family:Verdana ;
@@ -106,7 +105,7 @@ font-family:Verdana ;
     width: 90%;
   color: yellow;
   padding: 2px;
-  border: 10px
+  border: 10px;
 font-size: 100%;
 //justify-self: center ;
 font-family:Verdana ;
@@ -144,7 +143,7 @@ font-family: Helvetica;
 }
 .four > a > p{
   margin: auto;
-    width: 90%;
+    width: 85%;
   color: yellow;
   padding: 2px;
   border: 10px
