--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,21 @@
   padding: 0;
 }
 body {
-  padding: 2px;
-}
 
+}
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width:100%;
+  height: 100%;
+  z-index: 99999;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  background: none repeat scroll 0 0 #ffffff;
+}
 .grid {
   display: grid;
   grid-template-columns: 2fr 500px 1fr 1fr 2fr;
@@ -55,7 +67,7 @@ font-family: Comic Sans MS;
    padding: 100px;
 font-size: 400%;
 //justify-self: center ;
-font-family: Trebuchet MS;
+font-family: Helvetica;
 }
 .two > center > p3{
   color: white;
@@ -155,14 +167,13 @@ font-family:Verdana ;
 
 .five {
   grid-area: five;
-  //justify-self: center ;
   background-color: #2f2f2f;
 }
 
 .six {
   grid-area: six;
   background-color: #2f2f2f;
- //justify-self: center ;
+
 }
 .six > img {
   padding-left: 20px;
